fix: 🐢 sidebar z-index

--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -10,7 +10,7 @@ html {
 .sidebar {
   position: absolute;
   display: flex;
-  z-index: 89;
+  z-index: 109;
   .scroll-container {
     position: relative;
     height: 100%;
